--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ directories = "4.0.1"
 rfd = "0.8.2"
 walkdir = "2.3.2"
 nonblock = "0.1.0"
+ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
 
 [profile.dev.package."*"]
 opt-level = 2
