--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = "0.18.0"
+egui-sfml = { git = "https://github.com/crumblingstatue/egui-sfml.git" }
 pty-process = "0.2.0"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
