--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 egui-sfml = { git = "https://github.com/crumblingstatue/egui-sfml.git" }
-pty-process = "0.2.0"
+pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "quickfix" }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 directories = "4.0.1"
@@ -16,6 +16,8 @@ walkdir = "2.3.2"
 nonblock = "0.1.0"
 ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
 ksni = { git = "https://github.com/crumblingstatue/ksni.git" }
+thiserror = "1.0.31"
+enum-kinds = "0.5.1"
 
 [profile.dev.package."*"]
 opt-level = 2
