--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
 ksni = { git = "https://github.com/iovxw/ksni.git" }
 thiserror = "1.0.31"
 enum-kinds = "0.5.1"
+interprocess = { version = "1.1.1", default-features = false }
 
 [profile.dev.package."*"]
 opt-level = 2
