--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ ksni = { git = "https://github.com/iovxw/ksni.git" }
 thiserror = "1.0.31"
 enum-kinds = "0.5.1"
 interprocess = { version = "1.1.1", default-features = false }
+anyhow = "1.0.58"
 
 [profile.dev.package."*"]
 opt-level = 2
