--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", bran
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 directories = "5.0.1"
-rfd = "0.14.1"
 walkdir = "2.4.0"
 nonblock = "0.2.0"
 ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
@@ -22,6 +21,8 @@ anyhow = "1.0.79"
 zbus = "4.1.2"
 crossbeam-channel = "0.5.12"
 x11 = {version = "2.21.0", features = ["xlib"]}
+egui-modal = "0.3.6"
+egui-file-dialog = "0.5.0"
 
 [profile.dev.package."*"]
 opt-level = 2
