egui_colors update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ crossbeam-channel = "0.5.12"
 x11 = {version = "2.21.0", features = ["xlib"]}
 egui-modal = { git = "https://github.com/crumblingstatue/egui-modal.git", branch = "egui-0.29" }
 egui-file-dialog = { git = "https://github.com/crumblingstatue/egui-file-dialog.git", branch = "egui-0.29" }
-egui_colors = { git = "https://github.com/crumblingstatue/egui_colors.git" }
+egui_colors = "0.3.0"
 rand = "0.8.5"
 
 [profile.dev.package."*"]
