--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ egui-file-dialog = { git = "https://github.com/crumblingstatue/egui-file-dialog.
 egui_colors = { git = "https://github.com/frankvgompel/egui_colors.git" }
 rand = "0.8.5"
 existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git" }
+fuzzy-matcher = "0.3.7"
 
 [profile.dev.package."*"]
 opt-level = 2
