--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-egui-sfml = "0.9.0"
+egui-sf2g = "0.1.0"
 pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "quickfix" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
@@ -22,7 +22,7 @@ zbus = "5"
 crossbeam-channel = "0.5.12"
 x11 = { version = "2.21.0", features = ["xlib"] }
 egui-file-dialog = "0.9.0"
-egui_colors = "0.7.0"
+egui_colors = "0.8.0"
 rand = "0.9.0"
 existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git" }
 fuzzy-matcher = "0.3.7"
