--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.86"
 
 [dependencies]
 egui-sf2g = "0.3.0"
-pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "quickfix" }
+pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "as-raw-fd-pty-ref" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 directories = "6.0.0"
