--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,11 @@ x11rb = "0.13"
 egui-file-dialog = "0.9.0"
 egui_colors = "0.8.0"
 rand = "0.9.0"
-existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git" }
+existing_instance = "0.1.0"
 fuzzy-matcher = "0.3.7"
+clap.version = "4.5.37"
+clap.default-features = false
+clap.features = ["std", "help", "usage", "derive"]
 
 [profile.dev.package."*"]
 opt-level = 2
