--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mpvfrog"
-version = "0.1.0-rc.3"
+version = "0.2.0-dev"
 edition = "2024"
 rust-version = "1.86"
 license = "MIT OR Apache-2.0"
