--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = "1.0.111"
 directories = "6.0.0"
 walkdir = "2.4.0"
 nonblock = "0.2.0"
-ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
+ansi_term_buf = "0.1.0"
 thiserror = "2"
 enum-kinds = "0.5.1"
 interprocess = { version = "2.2", default-features = false }
